--- a/src/Components/UserCard/UserCard.module.scss
+++ b/src/Components/UserCard/UserCard.module.scss
@@ -39,6 +39,13 @@
     width: 100%;
   }
 
+  @media (max-width: 782px) {
+    & > *:nth-child(5) {
+      gap: 10px;
+      align-items: center;
+    }
+  }
+
   @media (min-width: 1024px) {
     gap: 30px 40px;
 
